--- a/Primeiro notebook.ipynb
+++ b/Primeiro notebook.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "'Braga'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +213,46 @@
     "    else:\n",
     "       print(\"O concelho {} precisava de mais {} para ter 50000 habitantes\".format(c, 50000-populacao[c]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Amares': 19853,\n",
+       " 'Barcelos': 124555,\n",
+       " 'Braga': 176154,\n",
+       " 'Cabeceiras de Basto': 17635,\n",
+       " 'Celorico de Basto': 19767,\n",
+       " 'Esposende': 35552,\n",
+       " 'Fafe': 53600,\n",
+       " 'Guimarães': 176154,\n",
+       " 'Póvoa de Lanhoso': 24230,\n",
+       " 'Terras de Bouro': 7506,\n",
+       " 'Vieira do Minho': 14077,\n",
+       " 'Vila Nova de Famalicão': 134969,\n",
+       " 'Vila Verde': 49171,\n",
+       " 'Vizela': 24477}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "populacao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -222,7 +262,7 @@
    }
   ],
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
