--- a/Expressões Regulares.ipynb
+++ b/Expressões Regulares.ipynb
@@ -40,8 +40,8 @@
     "# exemplo de um string normal\n",
     "print(\"O céu\\nestá azul\")\n",
     "# forçar a escrita de um \\\n",
-    "print(\"O céu\\\\nestá azul\")\n",
-    "# usar o prefixo r, para raw\n",
+    "print(\"O céu\\\\nestá azul\"), ou Print \n",
+    "# usar o prefixo r, para raw, print ou assim\n",
     "print(r\"O céu\\nestá azul\")"
    ]
   },
@@ -65,12 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "frase = \"O João tem 18 anos e nasceu em 2004, 2 anos antes da Inês que agora tem 16\""
+    "frase = \"O João tem 18 anos e nasceu em 2004, 2 anos antes da Inês que agora tem 16, que nasceu em 2006\""
    ]
   },
   {
@@ -88,24 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<re.Match object; span=(3, 4), match='o'>\n"
+      "<re.Match object; span=(11, 12), match='1'>\n"
      ]
     }
    ],
    "source": [
-    "# match = re.search(r'\\d', frase)\n",
-    "match = re.search(r'(a|e|i|o|u)+', frase)\n",
     "match = re.search(r'[0123456789]', frase)\n",
-    "# if match:\n",
-    "#     inicio, fim = match.span()\n",
-    "#     print(frase[inicio:fim])\n",
     "print(match)\n"
    ]
   },
@@ -204,20 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['O', 'João', 'tem', '18', 'anos', 'e', 'nasceu', 'em', '2004', '2', 'anos', 'antes', 'da', 'Inês', 'que', 'agora', 'tem', '16']\n"
+      "['2004', '2006']\n"
      ]
     }
    ],
    "source": [
     "# match = re.findall(r'\\d+', frase)\n",
-    "match = re.findall(r'\\w+', frase)\n",
+    "match = re.findall(r'\\d{4}', frase)\n",
     "\n",
     "print(match)"
    ]
@@ -296,16 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'O João tem 0x12 anos e nasceu em 0x7d4, 0x2 anos antes da Inês que agora tem 0x10'"
+       "'O João tem 0x12 anos e nasceu em 0x7d4, 0x2 anos antes da Inês que agora tem 0x10, que nasceu em 0x7d6'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,6 +310,29 @@
     "    return(hex(int(match[0])))\n",
     "\n",
     "re.sub(r\"\\d+\", tohex, frase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1992\n"
+     ]
+    }
+   ],
+   "source": [
+    "nascimento = \"14/10/1992\"\n",
+    "# nascimento = \"14-10-1992\"\n",
+    "\n",
+    "m = re.match(r\"(\\d\\d)[/-](\\d\\d)[/-](\\d\\d\\d\\d)\", nascimento)\n",
+    "\n",
+    "if m:\n",
+    "    print( m.group(3) )"
    ]
   },
   {
@@ -346,24 +364,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Pires', 'João', 'Paulo', 'Alves', 'Cabrita', 'Corte-Real']"
+       "['Pires', 'João', 'Paulo', 'Alves', 'Cabrita', 'Corte', 'Real']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# e = re.compile(r'[^0-9a-zA-Z]+')\n",
-    "e = re.compile(r'[^\\w-]+')\n",
-    "e.split(\"Pires,,,,João Paulo           Alves;Cabrita, Corte-Real\") "
+    "e = re.compile(r'[ ,;]+')\n",
+    "e.split(\"Pires,,,,João Paulo           Alves;Cabrita, Corte Real\") "
    ]
   },
   {
@@ -393,6 +411,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HIVI5C Human immunodeficiency virus 1 (HIV-1) gag gene; p24 protein. catccagtacatgcagggcctattgcaccaggccaaatgagagaaccaaggggaagtgacatagcaggaactacaagtacccttcaggaacaagtagcatggatgacaggtaacccacctgttccagtgggagaaatctataaaagatggataattctgggattaaataaaatagtaagaatgtatagccctgtcagcattttggacataaaacaagggccaaaggaaccc\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "flag = False\n",
+    "sequence = \"\"\n",
+    "source = \"\"\n",
+    "locusid = \"\"\n",
+    "keywords = \"\"\n",
+    "fonte = open(\"../genbank/L42022.1.gb\",'r')\n",
+    "# fonte = open(\"../genbank/L42023.1.gb\",'r')\n",
+    "for linha in fonte:\n",
+    "    if re.search(r\"^LOCUS\", linha):\n",
+    "        s = re.match(r\"LOCUS\\s+([^ ]+)\", linha)\n",
+    "        if s:\n",
+    "            # print( s.group(1) )\n",
+    "            locusid = s.group(1)    \n",
+    "    if re.search(r\"^SOURCE\", linha):\n",
+    "        s = re.match(r\"SOURCE\\s+(.+)\", linha)\n",
+    "        if s:\n",
+    "            # print( s.group(1) )\n",
+    "            source = s.group(1)\n",
+    "    if re.search(r\"^KEYWORDS\", linha):\n",
+    "        s = re.match(r\"KEYWORDS\\s+(.+)\", linha)\n",
+    "        if s:\n",
+    "            # print( s.group(1) )\n",
+    "            keywords = s.group(1)\n",
+    "    if re.search(r\"//\", linha):\n",
+    "        flag = False  \n",
+    "    if flag:\n",
+    "        # print(linha)\n",
+    "        s = re.match(r\"\\s+\\d+ ([actg ]+)\", linha)\n",
+    "        if s:\n",
+    "            # print( s.group(1) )\n",
+    "            sequence = sequence + s.group(1).replace(\" \", \"\")\n",
+    "    if re.search(r\"ORIGIN\", linha):\n",
+    "        flag = True\n",
+    "fonte.close()\n",
+    "print( locusid, source, keywords, sequence )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -401,23 +472,14 @@
     "import re\n",
     "\n",
     "sequencia = \"\"\n",
-    "references = \"\" # passar para array\n",
-    "version = \"\"\n",
-    "# para ler atrobitos multilinha\n",
+    "\n",
     "# [ a ler sequencia, a ler referências, ...]\n",
     "estado = [ False, False ]\n",
     "\n",
-    "# TITLE     Whole-genome random sequencing and assembly of Haemophilus\n",
-    "#             influenzae Rd\n",
-    "\n",
-    "# fonte = open(\"../genbank/L42022.1.gb\",'r')\n",
-    "fonte = open(\"../genbank/L42023.1.gb\",'r')\n",
+    "fonte = open(\"../genbank/L42022.1.gb\",'r')\n",
     "for linha in fonte:\n",
-    "    # print(linha)\n",
     "    if estado[0]:\n",
-    "        # a ler sequencia\n",
-    "        # print(linha)\n",
-    "        # print(linha.strip())\n",
+    "\n",
     "        if re.match(\"//\", linha):\n",
     "            print(\"Off\")\n",
     "            estado[0] = False\n",
